Cleaned up all of referene-client.